--- a/PA1_template.html
+++ b/PA1_template.html
@@ -9,7 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Rishabh Karmakar" />
+<meta name="author" content="Ketki Nirantar" />
 
 
 <title>Reproducible Research: Peer Assessment 1</title>
